[package]
name = "simple-rate-limit"
version = "0.1.0"
authors = ["James Laver <james.laver@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# ring-vec = "0.1"
ring-vec = { git = "https://github.com/irrustible/ring-vec", branch = "main" }
# ring-vec = { path = "../ring-vec" }