[package]
name = "simple-rate-limit"
version = "0.2.0"
description = "Rate limit enforcement as simple data structures, no atomics."
keywords = ["rate", "limit", "limiter", "quota"]
categories = ["algorithms", "data-structures", "date-and-time"]
authors = ["James Laver <james.laver@gmail.com>"]
homepage = "https://github.com/irrustible/simple-rate-limit"
repository = "https://github.com/irrustible/simple-rate-limit"
documentation = "https://docs.rs/simple-rate-limit"
edition = "2018"
license = "MPL-2.0"
readme = "README.md"

[dependencies]
ring-vec = "0.1"
